* "ShowOff:OnProjectileImpact"
* "ShowOff:OnQuestAdded"
* "ShowOff:OnQueueCornerMessage"
* "ShowOff:OnShowCornerMessage"
* "ShowOff:OnDisplayObjective"
* "ShowOff:OnCompleteObjective"
* "ShowOff:OnFireWeapon"


//===v1.51

===Bug Fixes:
* Fixed bad hook for the "ShowOff:OnShowCornerMessage" event. This may fix the NVAC-related crashes users have reported.

===Function changes:
* Allow passing a formlist of items for GetEquippedItemRefForItem


//===v1.55

===Bug Fixes:
* Fixed GetIngestibleConsumeSound causing a crash if the ingestible has no consume sound.
* Fixed hook for "ShowOff:OnProjectileCreate" causing issues with "continuous beam"-type projectiles
* Fixed GetEquippedItemRefForItem not working properly with formlists.

===New Functions:
* GetIsPlayerOverencumbered - 'sup
* RefillPlayerAmmo
* AuxTimerStart
* AuxTimerStop
* AuxTimerPaused
* AuxTimerTimeElapsed
* AuxTimerTimeToCountdown
* AuxTimerTimeLeft
* SetOnAuxTimerStartHandler
* SetOnAuxTimerStopHandler
* ClearShowoffSavedData

//===v1.60

*AS OF THIS VERSION, xNVSE 6.3.0 or greater is required.*

*Also, the ShowOff INI file is now optional, meaning a warning message will no longer appear if it is not found*

===Bug Fixes:
* Removed confusing hook conflict detection msg related to Tweaks.
* Level Up Menu: Fixed hook oversight that changed the vanilla behavior for how perk selection can be swapped

===New Functions:
* Get/SetAmmoName
* KillAllHostiles

===Function changes:
* RefillPlayerAmmo now only shows error console messages if console is open, and returns 1/0 for success.
* A couple of SO's item functions should now run faster, thanks to lStewieAl fixing the abuse of the slow DYNAMIC_CAST function.

===New Events:
* "ShowOff:OnReadBook"
* "ShowOff:OnDispositionChange"
* "ShowOff:OnAdd"
* "ShowOff:OnPreActivateInventoryItemAlt"


====== (Template:)

//===v???
===Bug Fixes:
*

===New Functions:
*

===Function changes:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********